crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__outdented_colon_in_record_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x = foo {\nbar\n:\nblah\n}\nx\n\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        (*
            Ident=>LowerIdent@2
            InlineApply=>LowerIdent@2
            (BeginRecord
                Ident=>LowerIdent@4
                InlineColon=>OpColon@5
                Ident=>LowerIdent@6
            EndRecord)
        EndApply)
    EndAssign)
    HintExpr
    Ident=>LowerIdent@8
EndTopLevelDecls)

[=== canfmt below ===]
Assign("x", Apply(Ident("foo"), [Record([("bar", Ident("blah"))])]))
Ident("x")

[=== formatted below ===]

