crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__outdented_colon_in_record_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x = foo {\n    bar\n    : blah,\n}\nx\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (*
                Ident=>LowerIdent@2
                InlineApply=>LowerIdent@2
                (BeginRecord
                    (*
                        Ident=>LowerIdent@4
                        InlineColon=>OpColon@5
                        Ident=>LowerIdent@6
                    EndRecordFieldPair)
                EndRecord)
            EndApply)
        EndAssign)
        HintExpr
        Ident=>LowerIdent@9
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), Apply(Ident("foo"), [Record([RecordFieldPair("bar", Ident("blah"))])]))
Ident("x")

[=== formatted below ===]

