crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__outdented_list_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a = [\n  1, 2, 3\n]\na\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginList Num=>IntBase10@3 Num=>IntBase10@5 Num=>IntBase10@7 EndList)
        EndAssign)
        HintExpr
        Ident=>LowerIdent@9
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("a"), List([IntBase10("1"), IntBase10("2"), IntBase10("3")]))
Ident("a")

[=== formatted below ===]

