crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__outdented_list_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a = [\n    1,\n    2,\n    3,\n]\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginList Num=>Int@3 Num=>Int@5 Num=>Int@7 EndList)
        EndAssign)
        HintExpr
        Ident=>LowerIdent@10
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("a"), List([IntBase10("1"), IntBase10("2"), IntBase10("3")]))
Ident("a")

[=== formatted below ===]

