crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parens_in_type_def_apply_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "U (b a) : b\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        ((*
                BeginTypeOrTypeAlias
                UpperIdent=>UpperIdent@0
                InlineApply=>UpperIdent@0
                (BeginParens
                    (* Ident=>LowerIdent@2 InlineApply=>LowerIdent@2 Ident=>LowerIdent@3 EndApply)
                EndParens)
            EndApply)
            InlineTypeColon=>OpColon@5
            Ident=>LowerIdent@6
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@7
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Apply(UpperIdent("U"), [Apply(Ident("b"), [Ident("a")])]), Name("b"))
Ident("a")

[=== formatted below ===]

